@@ -1,6 +1,6 @@
 Package: MTurkR
-Version: 0.5.52
-Date: 2014-10-09
+Version: 0.5.53
+Date: 2014-10-16
 Title: R Client for the MTurk Requester API
 Authors@R: c(person("Thomas J.", "Leeper", role = c("aut", "cre"),
                     email = "thosjleeper@gmail.com"),
